--- a/Lab2Searcher/Lab2Searcher.csproj
+++ b/Lab2Searcher/Lab2Searcher.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Application\LinqToXmlSearcher.cs" />
     <Compile Include="Application\SaxSearcher.cs" />
     <Compile Include="Model\IXmlSearcher.cs" />
+    <Compile Include="Model\SearchCriteria.cs" />
     <Compile Include="Model\Student.cs" />
     <Compile Include="XMLSearcherForm.cs">
       <SubType>Form</SubType>
@@ -59,7 +60,6 @@
       <DependentUpon>XMLSearcherForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="SearchCriteria.cs" />
     <EmbeddedResource Include="XMLSearcherForm.resx">
       <DependentUpon>XMLSearcherForm.cs</DependentUpon>
     </EmbeddedResource>
